# fast-api-project

./: .agent.md  .coverage  Makefile  README.md  cli.py  inmemory.py  load_env.py  main.py  pyproject.toml  random_pr.txt  requirements.txt  test_main.http  test_main.py
.github/agents/: migrate-pandas.agent.md
.github/workflows/: ci.yml
api/: cli.py  main.py
tests/api/: test_main.py
