[project]
name = "fast-api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rvangala", email = "rvangala@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "coverage>=7.13.4",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "fastapi>=0.129.2",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "ruff>=0.15.2",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.workspace]
members = [
    "fast-api-project",
    "project-name",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable import sorting rules (I) and unused import removal (F401)
select = ["I", "F401"]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
